# lazyreport

./: README.md  pyproject.toml
lazyreport/: app.py  cli.py  config.py  models.py
lazyreport/processors/: cvsscalc.py  docxhandler.py  hfclient.py
